fix overlapping button

--- a/client/src/main.styl
+++ b/client/src/main.styl
@@ -34,6 +34,7 @@ h2 {
   font-size: 2.5em;
   font-weight: normal;
   color: #777;
+  margin-top: 1em;
 }
 
 h3 {
